create authentication middleware poll comments model

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URL = "mongodb+srv://yashsawant310:XtPFJIFySyCOtjZm@cluster0.hp8gwv4.mongodb.net/poll-app-data?retryWrites=true&w=majority"
+TOKEN_KEY = "AKSKKLELDM1152525525252jjdjjd"
